@@ -7,6 +7,57 @@ import subprocess
 import tempfile
 
 
+class Editor(object):
+
+    def __init__(self, editor, encrypted_file):
+        self.editor = editor
+        self.encrypted_file = encrypted_file
+        self.original_cleartext = encrypted_file.read()
+        self.cleartext = self.original_cleartext
+
+    def main(self):
+        cmd = 'edit'
+        while cmd != 'quit':
+            try:
+                self.process_cmd(cmd)
+            except Exception, e:
+                print
+                print "Could not update due to error: {}".format(e)
+                print "Your changes are still available. You can try:"
+                print "\tedit (opens editor with current data again)"
+                print "\tencrypt (tries to encrypt current data again)"
+                print "\tquit (quits and looses your changes)"
+                cmd = raw_input("> ").strip()
+
+    def process_cmd(self, cmd):
+            if cmd == 'edit':
+                self.edit()
+                self.encrypt()
+            elif cmd == 'encrypt':
+                self.encrypt()
+            else:
+                print "Did not understand command '{}'".format(cmd)
+
+    def encrypt(self):
+        if self.cleartext == self.original_cleartext:
+            print "No changes from original cleartext. Not updating."
+            return
+        self.encrypted_file.write(self.cleartext)
+
+    def edit(self):
+        with tempfile.NamedTemporaryFile(
+                prefix='edit', suffix='.cfg') as clearfile:
+            clearfile.write(self.cleartext)
+            clearfile.flush()
+
+            subprocess.check_call(
+                [self.editor + ' ' + clearfile.name],
+                shell=True)
+
+            with open(clearfile.name, 'r') as new_clearfile:
+                self.cleartext = new_clearfile.read()
+
+
 def edit():
     """Secrets editor console script.
 
@@ -27,37 +78,7 @@ def edit():
     args = parser.parse_args()
 
     encrypted = args.filename
-    command = args.editor
 
     with EncryptedConfigFile(encrypted, write_lock=True) as sf:
-        original_cleartext = sf.read()
-        while True:
-            cleartext = sf.read()
-            with tempfile.NamedTemporaryFile(
-                    prefix='edit', suffix='.cfg') as clearfile:
-                clearfile.write(cleartext)
-                clearfile.flush()
-
-                subprocess.check_call(
-                    [command + ' ' + clearfile.name],
-                    shell=True)
-
-                with open(clearfile.name, 'r') as new_clearfile:
-                    new_cleartext = new_clearfile.read()
-
-                if new_cleartext == original_cleartext:
-                    print "No changes from original cleartext. Not updating."
-                    break
-                try:
-                    sf.write(new_cleartext)
-                except Exception, e:
-                    print "Could not encrypt due to error: {}".format(e)
-                    print ("    clear data is temporarily available "
-                           "in {}".format(clearfile.name))
-                    answer = raw_input(
-                        "Open editor (type 'edit') or quit and loose changes "
-                        "(type 'quit')\n")
-                    if answer == 'quit':
-                        break
-                else:
-                    break
+        editor = Editor(args.editor, sf)
+        editor.main()
